# zombie-alacod

./: .gitignore  CNAME  Cargo.toml  Makefile  README.md  game.html  index.html  manifest.json  style.css
.github/workflows/: main.yaml  pr.yaml  publish.yaml  release.yaml  test.yaml
assets/: camera.ron
assets/ZombieShooter/Sprites/Character/: hair_1_sheet.ron  machine_gun_sheet.ron  pistol_sheet.ron  player_animation.ron  player_config.ron  player_sheet.ron  shadow_sheet.ron  shirt_1_sheet.ron  shotgun_sheet.ron  weapons.ron
assets/ZombieShooter/Sprites/Zombie/: zombie_config.ron  zombie_hard_config.ron  zombie_hard_sheet.ron  zombie_sheet.ron
character_tester/: wasm.d.ts  wasm.js  wasm_bg.wasm.d.ts
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs
crates/game/: Cargo.toml  build.rs
crates/game/src/: camera.rs  debug.rs  frame.rs  global_asset.rs  input.rs  jjrs.rs  lib.rs  plugins.rs  state.rs
crates/game/src/audio/: mod.rs
crates/game/src/camera/: mod.rs  ui.rs
crates/game/src/character/: config.rs  create.rs  dash.rs  mod.rs  movement.rs
crates/game/src/character/enemy/: create.rs  mod.rs  spawning.rs  spawning_basic.rs
crates/game/src/character/enemy/ai/: pathing.rs
crates/game/src/character/health/: mod.rs  ui.rs
crates/game/src/character/player/: config.rs  control.rs  create.rs  input.rs  jjrs.rs  mod.rs
crates/game/src/collider/: mod.rs  ui.rs  weight.rs
crates/game/src/entity/: mod.rs
crates/game/src/weapons/: audio.rs  mod.rs  ui.rs
crates/map/: Cargo.toml
crates/map/src/game/entity/map/: enemy_spawn.rs  mod.rs  wall.rs
crates/map/src/generation/: context.rs
crates/map/src/generation/imp/: basic.rs
crates/map/src/ldtk/: plugins.rs
crates/map/src/ldtk/game/entity/: door.rs  player_spawn.rs  window.rs
crates/map/src/ldtk/game/system/: add_level_components.rs
crates/map/src/ldtk/loader/: mod.rs
crates/matchbox_server/: Cargo.toml  Dockerfile
crates/utils/: Cargo.toml
crates/utils/src/: fixed_math.rs  lib.rs  macreau.rs  math.rs  rng.rs  rollback.rs
crates/utils/src/web/: mod.rs
examples/: character_tester.rs  map_explorer.rs  map_preview.rs
examples/args/: cli.rs  mod.rs  web.rs
map_preview/: wasm.d.ts  wasm.js  wasm_bg.wasm.d.ts
website/: .gitignore  Dockerfile  cache-version.js  game.html  game.js  index.html  main.js  nginx.conf  package-lock.json  package.json  svelte.config.js  sw.js
website/site/: package-lock.json  package.json
website/site/src/: app.css  app.html  theme.css
website/site/src/routes/: +layout.svelte  +page.svelte
website/src/: app.css  app.html  theme.css
website/src/lib/: SVGIcon.svelte  Title.svelte
website/src/lib/blogs/: BlogCard.svelte  LatestBlog.svelte
website/src/lib/blogs/content/: first.md  index.json
website/src/lib/game/: CurrentVersion.svelte  DevProgress.svelte  GameCard.svelte  applications.json
website/src/lib/layouts/: Card.svelte  CardGrid.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/blog/: +page.svelte
website/src/routes/blog/[id]/: +page.svelte
website/src/routes/game/: +page.svelte
website/src/routes/play/: +page.svelte
website/src/routes/settings/: +page.svelte  settingsStore.ts
website/src/routes/tools/: +page.svelte
website/static/: cache-version.js  loader.html  loader.js  manifest.json
