[package]
name = "zombie_alacod"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.0.1"
edition = "2021"
exclude = ["assets/*", "repo/*", "scripts/*"]

[features]
default = []

native = ["bevy/file_watcher", "bevy/dynamic_linking"]


[workspace]
members = [ "crates/*" ]

[dependencies]
bevy = { version = "0.15" }
utils = { path = "./crates/utils" }
map = { path = "./crates/map" }
game = { path = "./crates/game" }
animation = { path = "./crates/animation" }
bevy_ggrs = {workspace = true}
leafwing-input-manager = {workspace = true}


[workspace.dependencies]
bevy_ecs_tilemap = { version = "0.15", default-features = false }
bevy_ecs_ldtk = { version = "0.11", default-features = true }
bevy = { version = "0.15", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_core_pipeline"] }
bevy_common_assets = { version = "0.12", features = ["ron"]}
bevy_ggrs = "0.17"
ggrs = { version = "0.11.0", features = ["sync-send"] }
bevy-inspector-egui = "0.30.0"
leafwing-input-manager = "0.16"


derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.8.5"
once_cell = "1.21.3"
uuid = "1.16.0"

thiserror = "2.0.12"

pathfinding = "4.9.1"


[package.metadata.docs.rs]
all-features = true


[[example]]
name = "map_preview"
path = "examples/map_preview.rs"

[[example]]
name = "map_generation"
path = "examples/map_generation.rs"

[[example]]
name = "map_explorer"
path = "examples/map_explorer.rs"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/bascanada/bevy_ecs_ldtk", branch = "transform_ldtk_project" }


[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
