[package]
name = "zombie_alacod"
description = "An ECS-friendly ldtk plugin for bevy."
version = "0.0.1"
edition = "2021"
exclude = ["assets/*", "repo/*", "scripts/*"]

[features]
default = []

native = ["bevy/file_watcher"]


[workspace]
members = [ "crates/*" ]

[dependencies]
bevy_ecs_tilemap = { version = "0.15", default-features = false }
bevy_ecs_ldtk = { version = "0.11", default-features = true }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_sprite", "bevy_render", "bevy_core_pipeline", "webgl2", "png", "multi_threaded"
  ] }
bevy_ggrs = { version = "0.17", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.11", features = ["ggrs"] }
bevy_kira_audio ={ version = "0.22" }
leafwing-input-manager = "0.16.0"
derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.8.5"
wasm-bindgen = "0.2"


pathfinding = "4.9.1"

utils = { path = "./crates/utils" }
map = { path = "./crates/map" }
game = { path = "./crates/game" }
animation = { path = "./crates/animation" }

[dev-dependencies]
bevy = "0.15"
bevy-inspector-egui = "0.30.0"
clap = { version = "4.4", features = ["derive"] }


[dependencies.web-sys]
version = "0.3"
# Enable features for the APIs we need
features = [
  'Window',
  'Location',
  'UrlSearchParams', # Provides easy parsing of query strings
]

[package.metadata.docs.rs]
all-features = true


[[example]]
name = "map_preview"
path = "examples/map_preview.rs"

[[example]]
name = "map_generation"
path = "examples/map_generation.rs"

[[example]]
name = "map_explorer"
path = "examples/map_explorer.rs"

[patch.crates-io]
bevy_ecs_ldtk = { git = "https://github.com/bascanada/bevy_ecs_ldtk", branch = "transform_ldtk_project" }


