
[package]
name = "game"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.15"
ggrs = "0.11.0"
bevy_ggrs = "0.17.0"
bevy_kira_audio ={ version = "0.22" }
bevy_matchbox = { version = "0.11", features = ["ggrs"] }
leafwing-input-manager = "0.16.0"
bevy_common_assets = { version = "0.12", features = ["ron"]}

utils = { path = "../utils"}
map = { path = "../map"}
animation ={ path = "../animation"}

thiserror = "2.0.12"

rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"

bevy-inspector-egui = "0.30.0"

lazy_static = "1.5.0"