
[package]
name = "map"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = {workspace = true}
bevy_ecs_ldtk = { workspace = true, default-features = true }

utils = { path = "../utils"}

thiserror = {workspace = true}

rand = {workspace = true}

once_cell = {workspace = true}

serde = {workspace = true}
serde_json = {workspace = true}

uuid = {workspace = true}

bevy-inspector-egui = {workspace = true}