
[package]
name = "map"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_ecs_ldtk = { version = "0.11", default-features = true }

utils = { path = "../utils"}

thiserror = "2.0.12"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
pathfinding = "4.9.1"
uuid = "1.11.0"

bevy-inspector-egui = "0.30.0"