[package]
name = "utils"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_ggrs = "0.17.0"

serde = { version = "1.0", features = ["derive"] }


fixed = { version = "1.29", features = [ "serde-str" ] }
fixed-sqrt = "0.2"
fixed_trigonometry = "0.4.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
web-sys = "0.3.68"